tests/patsyn/should_compile/ImpExp_Exp.hs
{-# LANGUAGE PatternSynonyms #-}
{-# LANGUAGE ExplicitNamespaces #-}
module ImpExp_Exp (data Single) where

pattern Single x <- [x]
